Move descriptions to lang files

--- a/i18n/ja_JP.json
+++ b/i18n/ja_JP.json
@@ -21,6 +21,34 @@
 	".SPE" : "レイス",
 	".YUR" : "幽霊",
 
+	"#stre" : "Strength",
+	"#weak" : "Weaknesses",
+
+	"BAN-streDesc" : "Cible qu'une personne à la fois",
+	"BAN-weakDesc" : "Craignent les crucifix et sont moins agressif à leurs portées",
+	"CAU-streDesc" : "Chance d'attaquer dans l'obscurité",
+	"CAU-weakDesc" : "Allumer les lumières réduit les chances d'attaque",
+	"DEM-streDesc" : "Attaque plus souvent",
+	"DEM-weakDesc" : "Poser correctement une question sur une planche Ouija ne réduira pas la santé mentale",
+	"ESP-streDesc" : "Rien",
+	"ESP-weakDesc" : "Bâton d'encens l'empêchera d'attaquer pendant une longue période",
+	"FAN-streDesc" : "Le regarder diminue considérablement la santé mentale",
+	"FAN-weakDesc" : "Prendre une photo le fait temporairement disparaitre",
+	"JIN-streDesc" : "Voyage à une vitesse plus rapide si la victime est éloignée",
+	"JIN-weakDesc" : "Couper le courant l'empêche d'utiliser sa capacité",
+	"OMB-streDesc" : "Etre timide signifie que le fantôme sera plus difficile à trouver",
+	"OMB-weakDesc" : "N'entre pas en chasse si plusieurs personnes à proximité",
+	"ONI-streDesc" : "Plus actifs lorsque des personnes sont à proximité et ont vu des objets en mouvement à grande vitesse",
+	"ONI-weakDesc" : "Être plus actif le rendra plus facile à trouver et identifier",
+	"PLT-streDesc" : "Peut lancer d'énormes quantités d'objets à la fois",
+	"PLT-weakDesc" : "Inefficace dans une pièce vide",
+	"REV-streDesc" : "Voyage à une vitesse plus rapide s'il chasse",
+	"REV-weakDesc" : "Se cacher le fera bouger lentement",
+	"SPE-streDesc" : "Ne touche presque jamais le sol (pas d'empreintes)",
+	"SPE-weakDesc" : "Réaction toxique au sel",
+	"YUR-streDesc" : "Effet pluys fort sur la santé mentale",
+	"YUR-weakDesc" : "Le fait d'utiliser un bâton d'encens dans la salle du Yurei l'empêchera de se promener longtemps dans les lieux",
+
 	".SPB" : "スピリットボックス",
 	".EPR" : "指紋",
 	".ECR" : "ゴーストライテイング",
