--- a/i18n/fr_FR.json
+++ b/i18n/fr_FR.json
@@ -46,7 +46,7 @@
 	"REV-weakDesc" : "Se cacher le fera bouger lentement",
 	"SPE-streDesc" : "Ne touche presque jamais le sol (pas d'empreintes)",
 	"SPE-weakDesc" : "Réaction toxique au sel",
-	"YUR-streDesc" : "Effet pluys fort sur la santé mentale",
+	"YUR-streDesc" : "Effet plus fort sur la santé mentale",
 	"YUR-weakDesc" : "Le fait d'utiliser un bâton d'encens dans la salle du Yurei l'empêchera de se promener longtemps dans les lieux",
 
 	".SPB" : "Spirit box",
