--- a/i18n/en_GB.json
+++ b/i18n/en_GB.json
@@ -24,30 +24,30 @@
 	"#stre" : "Strength",
 	"#weak" : "Weaknesses",
 
-	"BAN-streDesc" : "Cible qu'une personne à la fois",
-	"BAN-weakDesc" : "Craignent les crucifix et sont moins agressif à leurs portées",
-	"CAU-streDesc" : "Chance d'attaquer dans l'obscurité",
-	"CAU-weakDesc" : "Allumer les lumières réduit les chances d'attaque",
-	"DEM-streDesc" : "Attaque plus souvent",
-	"DEM-weakDesc" : "Poser correctement une question sur une planche Ouija ne réduira pas la santé mentale",
-	"ESP-streDesc" : "Rien",
-	"ESP-weakDesc" : "Bâton d'encens l'empêchera d'attaquer pendant une longue période",
-	"FAN-streDesc" : "Le regarder diminue considérablement la santé mentale",
-	"FAN-weakDesc" : "Prendre une photo le fait temporairement disparaitre",
-	"JIN-streDesc" : "Voyage à une vitesse plus rapide si la victime est éloignée",
-	"JIN-weakDesc" : "Couper le courant l'empêche d'utiliser sa capacité",
-	"OMB-streDesc" : "Etre timide signifie que le fantôme sera plus difficile à trouver",
-	"OMB-weakDesc" : "N'entre pas en chasse si plusieurs personnes à proximité",
-	"ONI-streDesc" : "Plus actifs lorsque des personnes sont à proximité et ont vu des objets en mouvement à grande vitesse",
-	"ONI-weakDesc" : "Être plus actif le rendra plus facile à trouver et identifier",
-	"PLT-streDesc" : "Peut lancer d'énormes quantités d'objets à la fois",
-	"PLT-weakDesc" : "Inefficace dans une pièce vide",
-	"REV-streDesc" : "Voyage à une vitesse plus rapide s'il chasse",
-	"REV-weakDesc" : "Se cacher le fera bouger lentement",
-	"SPE-streDesc" : "Ne touche presque jamais le sol (pas d'empreintes)",
-	"SPE-weakDesc" : "Réaction toxique au sel",
-	"YUR-streDesc" : "Effet pluys fort sur la santé mentale",
-	"YUR-weakDesc" : "Le fait d'utiliser un bâton d'encens dans la salle du Yurei l'empêchera de se promener longtemps dans les lieux",
+	"BAN-streDesc" : "Will only target one person at a time",
+	"BAN-weakDesc" : "It fear the Crucifix and will be less aggressive when near one",
+	"CAU-streDesc" : "Increased chance to attack in the dark",
+	"CAU-weakDesc" : "Turning lights on arround the Mare will lower its chance to attack",
+	"DEM-streDesc" : "Attack more often",
+	"DEM-weakDesc" : "Asking a Demon successful questions on the Ouija Board won't lower the user sanity",
+	"ESP-streDesc" : "Nothing",
+	"ESP-weakDesc" : "Smudge sticks stop it attacking for a long period of time",
+	"FAN-streDesc" : "Looking at it will considerably drop your sanity",
+	"FAN-weakDesc" : "Taking a photo of it will make it temporarily disappear",
+	"JIN-streDesc" : "Travel at a faster speed if its victim is far away",
+	"JIN-weakDesc" : "Turning off the locations power source will prevent the Jinn from using its ability",
+	"OMB-streDesc" : "Being shy means the Ghost will be harder to find",
+	"OMB-weakDesc" : "It will not enter hunting mode if there is multiple people nearby",
+	"ONI-streDesc" : "More active when people are nearby and have been seen moving objects at great speed",
+	"ONI-weakDesc" : "Being more active will make the Oni easier to find and identify",
+	"PLT-streDesc" : "Can throw huge amounts of objects at once",
+	"PLT-weakDesc" : "Ineffective in an empty room",
+	"REV-streDesc" : "Travel at a significantly faster speed when hunting a victim",
+	"REV-weakDesc" : "Hiding from the Revenant will cause it to move very slowly",
+	"SPE-streDesc" : "Almost never touche the ground (no footsteps)",
+	"SPE-weakDesc" : "Toxic reaction to Salt",
+	"YUR-streDesc" : "Have a stronger effect on people sanity",
+	"YUR-weakDesc" : "Smudging the Yurei's room will cause it to not wander arroud the location for a long time",
 
 	".SPB" : "Spirit box",
 	".EPR" : "Fingerprints",
