--- a/i18n/fr_FR.json
+++ b/i18n/fr_FR.json
@@ -13,7 +13,7 @@
 	".DEM" : "Démon",
 	".ESP" : "Esprit",
 	".FAN" : "Fantôme",
-	".JIN" : "Jinn",
+	".JIN" : "Djinn",
 	".OMB" : "Ombre",
 	".ONI" : "Oni",
 	".PLT" : "Poltergeist",
